# ShoutVST

./: !!make_project!!.bat  .gitignore  CMakeLists.txt  LibShoutWrapper.cpp  ShoutVST.h  ShoutVSTEditor.cpp  ShoutVSTEncoderFLAC.cpp
CMake/: CMakeLists.txt
FLUID/: CMakeLists.txt
